try abcl-bin in install-for-ci.sh